--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./src/styles/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
@@ -13,7 +13,7 @@
   <div class="container">
 
   
-      <img class="bg-image" src="./images/black.jpg" alt="brown drums">
+      <img class="bg-image" src="./src/assets/images/black.jpg" alt="brown drums">
       <div class="everything">
         <h1 id="title">Drum 🥁 Kit</h1>
         <h2 id="instruction">Press a key on your keyboard or click on the drums with your mouse to start playing</h2>
@@ -38,7 +38,7 @@
   
   
 
-  <script src="./index.js"></script>
+  <script src="./src/scripts/app.js"></script>
 
 </body>
 
