--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img class="bg-image" src="./src/assets/images/black.jpg" alt="brown drums">
       <div class="everything">
         <h1 id="title">Drum 🥁 Kit</h1>
-        <h2 id="instruction">Press a key on your keyboard or click on the drums with your mouse to start playing</h2>
+        <h2 id="instruction">Press a key on your keyboard or click on the drums to start playing</h2>
         <div class="set">
           
           <button class="a drum">a</button>
